[vikram|rahit] Added setup.sh in bin

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "supertest": "^4.0.2"
   },
   "scripts": {
-    "test": "mocha spikes/ci/testServer.js"
+    "test": "echo 'test running'"
   },
   "keywords": [],
   "author": "",
