--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "test": "nyc mocha --recursive"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "mocha": "^8.0.1",
