--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
+    "eslint": "^7.5.0",
     "mocha": "^8.0.1",
     "nyc": "^15.1.0",
     "supertest": "^4.0.2"
