--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "supertest": "^4.0.2"
   },
   "scripts": {
-    "test": "echo 'test running'"
+    "test": "mocha spikes/ci/testServer.js"
   },
   "keywords": [],
   "author": "",
