--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "supertest": "^4.0.2"
   },
   "scripts": {
-    "test": "mocha spikes/ci/testServer.js"
+    "test": "sqlite3 spikes/db/spike.db < spikes/db/schema.sql && mocha spikes/ci/testServer.js"
   },
   "keywords": [],
   "author": "",
