|#1|trinangkur/rahit| added userRouter, created oAuthUtil.js and session class

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -97,6 +97,12 @@
       "rules": {
         "no-console": "off"
       }
+    },
+    {
+      "files": ["src/js/oAuthUtil.js"],
+      "rules": {
+        "no-process-env": "off"
+      }
     }
   ]
 }
