--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^7.5.0",
     "mocha": "^8.0.1",
     "nyc": "^15.1.0",
+    "sinon": "^9.0.2",
     "supertest": "^4.0.2"
   },
   "keywords": [],
