--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -89,7 +89,8 @@
       "files": ["public/js/*.js"],
       "rules": {
         "no-unused-vars": "off",
-        "no-undef": "off"
+        "no-undef": "off",
+        "max-len": "off"
       }
     },
     {
