--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "knex": "^0.21.3",
     "node-fetch": "^2.6.0",
     "pug": "^3.0.0",
     "sqlite3": "^5.0.0"
